#ifndef DOMOTIC_DEVICES_HOME
#define DOMOTIC_DEVICES_HOME

namespace sistema_domotico {
    
    class Home {
        private:
            Logger logger;
            int current_time;
            
    };

}

#endif